# PyPAD

./: README.md  setup.cfg
example/: attack.txt  bonafide.txt  pypad.ipynb
src/aikit/: metadata.py
src/aikit/graphics/: aesthetics.py  biometric_performance.py  confusion_matrix.py  det_plot.py  erc_plot.py  history.py  roc_curve.py
src/aikit/metrics/: det_curve.py  iso_30107_3.py  scores.py
src/pypad/: __init__.py
src/pypad/graphics/: __init__.py  aesthetics.py  biometric_performance.py  confusion_matrix.py  det_plot.py  erc_plot.py  history.py  roc_curve.py
src/pypad/metrics/: __init__.py  det_curve.py  iso_30107_3.py  scores.py
