[metadata]
name = aikit-cid-vision
version = 23.10.1
author = Sebastian Gonzalez - Carlos Aravena
author_email = carlos.aravena.c@gmail.com
description = Aikit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Centro-de-Vision-Computacional/aikit
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.5
install_requires =
    scipy
    sklearn
    matplotlib
    seaborn
    pandas
[options.packages.find]
where = src