[metadata]
name = pypad
version = 23.10.1
url = https://github.com/jedota/PyPAD
author = Sebastian Gonzalez and Carlos Aravena
author_email = carlos.aravena.c@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = PyPAD
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    scipy
    scikit-learn
    seaborn
    matplotlib
    pandas
python_requires = >=3.7
packages = find_namespace:
package_dir =
    = src

[options.packages.find]
where = src